--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,7 @@
             ],
             requires: [
                 'rcss!../bower_components/font-awesome/web-fonts-with-css/css/fontawesome-all.min.css',
+                'rcss!css/acc.css',
                 'modules/acc/module'
             ]
         };
