--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,6 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link href="/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="/bower_components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet" />
-
-    <script>
-
-    </script>
     <script>
         window.console = window.console || (function () {
             var c = {}; c.log = c.warn = c.debug = c.info = c.error = c.time = c.dir = c.profile = c.clear = c.exception = c.trace = c.assert = function () { };
@@ -102,10 +98,9 @@
         };
     </script>
     <script id="app" src="/bower_components/requirejs/require.js" data-main="startup.js" data-server="http://localhost:48907"
-        data-args="v=0.0.1" data-index="views-pien/views.html"></script>
+        data-args="v=0.0.1"></script>
 </head>
 
-<body ui-view>
-</body>
+<body ui-view></body>
 
 </html>
