--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,7 @@
         };
     </script>
     <script id="app" src="/bower_components/requirejs/require.js" data-main="startup.js" data-server="http://localhost:5000"
-        data-args="v=0.0.1"></script>
+        data-args="v=0.0.1" data-site="{}"></script>
 </head>
 
 <body ui-view>
