--- a/src/index.html
+++ b/src/index.html
@@ -147,6 +147,7 @@
             ],
             requires: [
                 'rcss!../bower_components/font-awesome/web-fonts-with-css/css/fontawesome-all.min.css',
+                'rcss!../bower_components/angular-ui-tree/dist/angular-ui-tree.min.css',
                 'rcss!../bower_components/leaflet/dist/leaflet.css',
                 'rcss!css/acc.css',
                 'modules/acc/module',
