--- a/src/modules/manage/configs/jexcel/equipmentCategory.html
+++ b/src/modules/manage/configs/jexcel/equipmentCategory.html
@@ -4,10 +4,9 @@
         <span class="modal-title">选择类型</span>
     </div>
     <div class="modal-body">
-        <input class="form-control" ng-model="val">
-
+        <input class="form-control" ng-model="$value">
     </div>
     <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="$close(val)">确定</button>
+        <button class="btn btn-primary" ng-click="$close($value)">确定</button>
     </div>
 </div>
