--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,10 @@
                 'jquery': '/src/js/app.application',
 
                 // extends
+                'jquery-ui': {
+                    path: '/bower_components/jquery-ui/jquery-ui.min',
+                    shim: { deps: ['jquery'] }
+                },
                 leaflet: {
                     path: '/bower_components/leaflet/dist/leaflet'
                 },
