--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
                     }
                 },
                 'ui-leaflet': {
-                    path: '/bower_components/ui-leaflet/dist/ui-leaflet.min.no-header',
+                    path: '/bower_components/ui-leaflet/dist/ui-leaflet',
                     shim: {
                         deps: ['angular-simple-logger', 'leaflet']
                     }
