--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,12 @@
                         deps: ['angular-simple-logger', 'leaflet']
                     }
                 },
+                'leaflet-dom-markers': {
+                    path: '/bower_components/Leaflet.DomMarkers/src/leaflet.dom-markers',
+                    shim: {
+                        deps: ['ui-leaflet']
+                    }
+                },
                 'tv4': {
                     path: '/bower_components/tv4/tv4'
                 },
