追加一个新模块

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 
 <body>
     <div>
-        <a href="src/index.html">开发</a>
+        <a href="src/index.html">acc开发</a>
     </div>
     <div>
-        <a href="dist/index.html">发布</a>
+        <a href="dist/index.html">acc发布</a>
+    </div>
+    <div>
+        <a href="src/demo.html">demo开发</a>
+    </div>
+    <div>
+        <a href="dist/demo.html">demo发布</a>
     </div>
 </body>
 
