--- a/src/demo.html
+++ b/src/demo.html
@@ -104,7 +104,13 @@
                 'leaflet-dom-markers': {
                     path: '/bower_components/Leaflet.DomMarkers/src/leaflet.dom-markers',
                     shim: {
-                        deps: ['ui-leaflet']
+                        deps: ['leaflet']
+                    }
+                },
+                'leaflet-markercluster': {
+                    path: '/bower_components/leaflet.markercluster/dist/leaflet.markercluster',
+                    shim: {
+                        deps: ['leaflet']
                     }
                 },
                 'tv4': {
