--- a/src/demo.html
+++ b/src/demo.html
@@ -183,7 +183,7 @@
             ]
         };
     </script>
-    <script id="app" src="/bower_components/requirejs/require.js" data-main="startup.js" data-server="http://localhost:5000"
+    <script id="app" src="/bower_components/requirejs/require.js" data-main="startup.js" data-server="http://127.0.0.1:8360/"
         data-args="v=0.0.1" data-site="{}"></script>
 </head>
 
