--- a/src/demo.html
+++ b/src/demo.html
@@ -119,7 +119,7 @@
                 'objectpath': {
                     path: '/bower_components/objectpath/lib/ObjectPath'
                 },
-                'schema-form': {
+                'angular-schema-form': {
                     path: '/bower_components/angular-schema-form/dist/schema-form',
                     shim: {
                         deps: ['tv4', 'objectpath']
@@ -128,7 +128,7 @@
                 'schema-form-bootstrap': {
                     path: '/bower_components/angular-schema-form-bootstrap/bootstrap-decorator',
                     shim: {
-                        deps: ['schema-form']
+                        deps: ['angular-schema-form']
                     }
                 },
 
