--- a/src/demo.html
+++ b/src/demo.html
@@ -183,8 +183,8 @@
             ]
         };
     </script>
-    <script id="app" src="/bower_components/requirejs/require.js" data-main="startup.js" data-server="http://127.0.0.1:8360/"
-        data-args="v=0.0.1" data-site="{}"></script>
+    <script id="app" src="/bower_components/requirejs/require.js" data-main="startup.js" index-view="/terminal"
+        data-server="http://127.0.0.1:8360/" data-args="v=0.0.1" data-site="{}"></script>
 </head>
 
 <body ui-view>
