--- a/src/demo.html
+++ b/src/demo.html
@@ -174,6 +174,7 @@
                 'respond'
             ],
             requires: [
+                'rcss!../bower_components/font-awesome/web-fonts-with-css/css/fontawesome-all.min.css',
                 'rcss!../bower_components/angular-ui-tree/dist/angular-ui-tree.min.css',
                 'rcss!../bower_components/leaflet/dist/leaflet.css',
                 'rcss!../bower_components/bootstrap-treeview/dist/bootstrap-treeview.min.css',
